Mask error code so it's always 0

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ before_install:
 language: bash
 
 script:
-        timeout 10 make ci > test.run
+        make PLAT=qemu
+        timeout 10 make ci > test.run || true
         grep "Success" test.run
