Travis CI: Forgot to include crucial dashes in the YAML

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 language: bash
 
 script:
-        make PLAT=qemu
-        timeout 10 make ci > test.run || true
-        cat test.run
-        grep "Success" test.run
+        - make PLAT=qemu
+        - timeout 10 make ci > test.run || true
+        - cat test.run
+        - grep "Success" test.run
