Added tinyprint as external dependency. Added software-based multiply/divide.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tinycrypt"]
 	path = tinycrypt
 	url = https://github.com/01org/tinycrypt.git
+[submodule "tinyprintf"]
+	path = tinyprintf
+	url = https://github.com/cjlano/tinyprintf.git
