Ignore changes in the tinycrypt library

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "tinycrypt"]
 	path = tinycrypt
 	url = https://github.com/01org/tinycrypt.git
+	ignore = dirty
 [submodule "tinyprintf"]
 	path = tinyprintf
 	url = https://github.com/cjlano/tinyprintf.git
