--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
-sudo: enabled
+sudo: required
+
+services:
+          - docker
 
 before_install:
-        - sudo apt-get update && sudo apt-get -y install make gcc-arm-none-eabi qemu-system-arm gdb-multiarch tmux
-
-language: bash
+- docker build -t cortexm
 
 script:
-        - make PLAT=qemu
-        - timeout 10 make ci > test.run || true
-        - cat test.run
-        - grep "Success" test.run
+- docker run -ti --rm cortexm
