--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
           - docker
 
 before_install:
-- docker build -t cortexm
+- docker build -t cortexm .
 
 script:
 - docker run -ti --rm cortexm
