Ensure kill signal does not produce a build error

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ language: bash
 
 script:
         - make PLAT=qemu
-        - timeout --foreground 5 qemu-system-arm -d guest_errors -M lm3s811evb -m 8K -nographic -kernel main.elf > test.run
+        - timeout --foreground 5 qemu-system-arm -d guest_errors -M lm3s811evb -m 8K -nographic -kernel main.elf > test.run || true
         - cat test.run
         - grep "Success" test.run
